mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: thanu-mongo
  namespace: thanu-ns1
spec:
  replicas: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo-cont
        image: mongo
        ports:
          - containerPort: 27017
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: thanu-sv
  namespace: thanu-ns1
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
