services.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanu-svc
spec:
  selector:
    digital: bank
  ports:
    port: 4545
    targetPort: 4545
  type: ClusterIP
