kgateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway 
metadata:
  name: newkgateway
  namespace: thanu-ns1
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
